# pw_ioi

./: .gitignore  Readme.md  SETUP.md
Hackathon-PW/: .gitignore  TROUBLESHOOTING.md
Hackathon-PW/backend/: .env.example  README_AUTH.md  app.py  auth_api.py  pyproject.toml
Hackathon-PW/backend/contracts/: app.py
Hackathon-PW/backend/contracts/scripts/: check_ticket.py  set_ticket_asa.py
Hackathon-PW/frontend/: index.html  package-lock.json
Hackathon-PW/frontend/src/: App.jsx
Hackathon-PW/frontend/src/pages/: LandingPage.jsx
Hackathon-PW/frontend/src/utils/: auth.js
backend/: algokit.json  auth_api.py  pyproject.toml
backend/contracts/: app.py
backend/contracts/scripts/: create_ticket_asa.py  deploy_full.py  deploy_testnet.py
backend/frontend/src/pages/: Dashboard1.jsx  LandingPage.jsx
backend/metadata/: ticket.json
backend/scripts/: check_ticket.py  create_ticket_asa.py  deploy.py  optin_ticket.py  set_ticket_asa.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  createEvent.jsx  index.css  main.jsx
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx
frontend/src/utils/: auth.js  wallet.js
